--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 BOT_TOKEN: 
-  - 
+  - MTAzMjg5MTcwODIzMDM0ODgyMQ.G2S73h.IjGhjjQr7d_Xf_NFNzsXS93IXSdwhcMxWgN7oE
   - 
 CHANNEL_ID: 
   - 958520731652730900
